--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "mongoose": "^5.3.9",
+    "nodemon": "^1.18.6",
     "socket.io": "^2.1.1"
   }
 }
